<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.github.jummes</groupId>
    <artifactId>morecompost-parent</artifactId>
    <version>0.9.7</version>
  </parent>
  <artifactId>morecompost-core</artifactId>
  <name>morecompost-core</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
    	<build>
    	<plugins>
        	<plugin>
            	<artifactId>maven-compiler-plugin</artifactId>
            	<version>3.7.0</version>
            	<configuration>
                 	<source>1.8</source>
                	<target>1.8</target>
               	</configuration>
           	</plugin>
      	 </plugins>
     	 <resources>
     		<resource>
       			 <directory>src/main/resources</directory>
     			 <filtering>true</filtering>
  		    </resource>
  		</resources>
  	</build>
  <repositories>
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.14.4-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
	</dependency>
  </dependencies>
</project>
